--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -1,16 +1,88 @@
 @keyframes blink {
-    0% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0.5;
-    }
-    100% {
-      opacity: 1;
-    }
+  0% {
+    opacity: 1;
   }
-  
-  .animate-blink {
-    animation: blink 1.5s infinite;
+
+  50% {
+    opacity: 0.5;
   }
-  
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.animate-blink {
+  animation: blink 1.5s infinite;
+}
+
+/* General styles */
+.fixed {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  background-color: black;
+  border-bottom: 1px solid white;
+  z-index: 50;
+}
+
+.bg-black {
+  background-color: black;
+}
+
+.shadow-md {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.text-white {
+  color: white;
+}
+
+.transition-all {
+  transition: all 0.3s;
+}
+
+.border-b {
+  border-bottom: 1px solid white;
+}
+
+/* Media Queries */
+@media (max-width: 767px) {
+
+  .flex.items-center.space-x-6>button:nth-child(4),
+  .flex.items-center.space-x-6>button:nth-child(5) {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  .py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .rounded-lg {
+    border-radius: 0.5rem;
+  }
+
+  .text-sm {
+    font-size: 0.875rem;
+  }
+
+  .font-medium {
+    font-weight: 500;
+  }
+
+  .max-w-xs {
+    max-width: 20rem;
+  }
+
+  .hover\:scale-110:hover {
+    transform: scale(1.10);
+  }
+}
